[package]
name = "rotating-file"
version = "0.4.0"
authors = ["soulmachine <soulmachine@gmail.com>"]
edition = "2021"
description   = "A thread-safe rotating file with customizable rotation behavior."
license = "Apache-2.0"
repository = "https://github.com/soulmachine/rotating-file"
keywords = ["logging", "logrotate", "rotating"]

[features]
zip = ["dep:zip"]

[dependencies]
chrono = "0.4.19"
flate2 = "1.0.23"
thiserror = "1.0.44"
tracing = "0.1.37"

zip = { version = "0.6.2", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.64"

[dev-dependencies]
once_cell = "1.10.0"
